<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity">

    <RelativeLayout
            android:id="@+id/playPauseBtnSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="300dp">

            <Button
                android:id="@+id/playBtn"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@drawable/play_button"
                android:layout_centerHorizontal="true"
                android:visibility="visible"
                android:enabled="true"/>
            <Button
                android:id="@+id/pauseBtn"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@drawable/pause_button"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"
                android:enabled="false"/>
    </RelativeLayout>

    <Button
        android:id="@+id/manageRoomsBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="25dp"
        android:text="@string/rooms"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textColor="#000000"
        />

    <Button
            android:id="@+id/managePlaylistsBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/playlists"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textColor="#000000"
    />

    <Button
            android:id="@+id/storeBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="25dp"
            android:text="@string/store"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textColor="#000000"
    />

    <RelativeLayout
            android:id="@+id/infoSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/playPauseBtnSection"
            android:layout_marginTop="100dp"
            android:visibility="invisible">
            <TextView
                    android:id="@+id/nowPlaying"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playing"
                    android:textSize="40dp"
                    android:textColor="#000000"
                    android:layout_centerHorizontal="true"/>

            <TextView
                    android:id="@+id/currentSong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nowPlaying"
                    android:paddingTop="20dp"
                    android:text="Current Song"
                    android:textSize="70dp"
                    android:textColor="#000000"
                    android:layout_centerHorizontal="true"/>
            <RelativeLayout
                    android:id="@+id/currentRoomSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/currentSong"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true">
                <TextView
                        android:id="@+id/in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/in"
                        android:textSize="40dp"
                        android:textColor="#000000"/>
                    <TextView
                            android:id="@+id/currentRoom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Current room"
                            android:textSize="55dp"
                            android:textColor="#000000"
                            android:layout_toRightOf="@id/in"
                            android:layout_marginLeft="10dp"/>
            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/currentPlaylistSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/currentRoomSection"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true">
                <TextView
                        android:id="@+id/from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/from"
                        android:textSize="40dp"
                        android:textColor="#000000"/>
                <TextView
                        android:id="@+id/currentPlaylist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Current playlist"
                        android:textSize="55dp"
                        android:textColor="#000000"
                        android:layout_toRightOf="@id/from"
                        android:layout_marginLeft="10dp"/>
            </RelativeLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>