<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".LoginActivity">

    <RelativeLayout
            android:id="@+id/loginUsernameSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="150dp">
                    <TextView
                            android:id="@+id/loginUsernameLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textAlignment="center"
                            android:textSize="14pt"
                            android:textColor="@android:color/black"
                    />
                    <EditText
                            android:id="@+id/loginUsernameBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/loginUsernameLabel"
                            android:layout_marginLeft="7dp"
                            android:ems="10"
                            tools:layout_editor_absoluteY="213dp"
                            tools:layout_editor_absoluteX="185dp"
                            android:enabled="true"/>

            </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loginPasswordSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginUsernameSection"
        android:layout_marginTop="15dp">
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
            <TextView
                    android:id="@+id/loginPasswordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAlignment="center"
                    android:textSize="14pt"
                    android:textColor="@android:color/black"/>
            <EditText
                    android:id="@+id/loginPasswordBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/loginPasswordLabel"
                    android:layout_marginLeft="7dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteY="213dp"
                    tools:layout_editor_absoluteX="185dp"
                    android:enabled="true"/>

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loginBtnSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginPasswordSection"
        android:layout_marginTop="50dp">
        <Button
                android:id="@+id/loginBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/login"
                android:textSize="20dp"
                android:enabled="true"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>