<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".RoomsActivity">

    <TextView
            android:id="@+id/roomsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="30dp"
            android:text="@string/rooms_title"
            android:textColor="#000000"
            android:textSize="40dp"/>

    <RelativeLayout
            android:id="@+id/roomsListSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/roomsTitle">
        <ListView
                android:id="@+id/roomsTitlesList"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                app:layout_goneMarginBottom="10dp"
                android:layout_marginBottom="20dp"
                android:clickable="false"/>

        <ListView
                android:id="@+id/playlistTitlesList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/roomsTitlesList"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:clickable="false"/>
    </RelativeLayout>

    <TextView
            android:id="@+id/dynamicLabel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/roomsListSection"
            app:layout_constraintBottom_toTopOf="@id/setPlaylistBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:text="TEST_TEXT"
            android:textSize="16dp"
            android:textColor="#000000"
            android:visibility="invisible"/>

    <EditText
            android:id="@+id/dynamicEdit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/roomsListSection"
            app:layout_constraintLeft_toRightOf="@id/dynamicLabel"
            app:layout_constraintBottom_toTopOf="@id/setPlaylistBtn"
            android:layout_marginLeft="20dp"
            android:textSize="16dp"
            android:textColor="#000000"
            android:visibility="invisible"/>

    <Button
            android:id="@+id/confirmSettingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/roomsListSection"
            app:layout_constraintBottom_toTopOf="@id/setPlaylistBtn"
            app:layout_constraintRight_toLeftOf="@id/dynamicEdit"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/ok"
            android:textSize="16dp"
            android:textColor="#000000"
            android:visibility="invisible"/>

    <Button
            android:id="@+id/setPlaylistBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/set_playlists"
            android:textSize="16dp"
            android:textColor="#000000"/>

</android.support.constraint.ConstraintLayout>